libpayload: Add a generic driver for usb hubs
The current drivers for external usb hubs and root hubs all follow
the same pattern. Before adding another one with 90% of the same code,
extract the common parts and rewrite them with a simple interface.

This also adds debouncing of new attachments. Current drivers just
waited 100ms before they reset the device. However, we should check
if the device becomes disconnected and reconnected during this period.

Porting of the current hub drivers will take place in separate
commits (when I have time to test the older HCIs).

Original-Change-Id: I0c0ce0ac1b1cc51fb4cd009b3f9fcd1b9d2ba8fe
Signed-off-by: Nico Huber <nico.huber@secunet.com>
Reviewed-on: http://review.coreboot.org/3450
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
(cherry picked from commit 0b78de2ee90771c4b37278203e0f59bc3afca487)

BUG=chrome-os-partner:21969
TEST=None

Change-Id: I97b97c310a59b400cff8c9c245b5b24cfec3a109
Signed-off-by: Julius Werner <jwerner@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/168095

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -398,6 +398,10 @@ config USB_XHCI_BASE_ADDRESS
 	depends on USB_MEMORY && USB_XHCI
 	default 0x12000000
 
+config USB_GEN_HUB
+	bool
+	default n
+
 endmenu
 
 menu "Debugging"
