--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -400,7 +400,8 @@ config USB_XHCI_BASE_ADDRESS
 
 config USB_GEN_HUB
 	bool
-	default n
+	default n if (!USB_HUB)
+	default y if (USB_HUB)
 
 endmenu
 
