--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -400,8 +400,8 @@ config USB_XHCI_BASE_ADDRESS
 
 config USB_GEN_HUB
 	bool
-	default n if (!USB_HUB)
-	default y if (USB_HUB)
+	default n if (!USB_HUB && !USB_XHCI)
+	default y if (USB_HUB || USB_XHCI)
 
 endmenu
 
