libpayload: usb: Allow direct instantiation of MMIO host controllers
The existing USB_MEMORY mechanism to instantiate non-PCI host
controllers is clunky and inflexible... most importantly, it doesn't
allow multiple host controllers of the same kind. This patch replaces it
with a function that allows payloads to directly instantiate as many
host controllers of whatever type they need.

CQ-DEPEND=CL:169541
BUG=chrome-os-partner:21969
TEST=Manual

Change-Id: Ic21d2016a4ef92c67fa420bdc0f0d8a6508b69e5
Signed-off-by: Julius Werner <jwerner@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/169454
Reviewed-by: Stefan Reinauer <reinauer@google.com>

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -374,29 +374,10 @@ config USB_MSC
 	  Say Y here unless you know exactly what you are doing.
 
 config USB_PCI
-	bool
+	bool "Auto-scan PCI bus for USB host controllers"
+	depends on USB
 	default y if ARCH_X86
 	default n
-
-config USB_MEMORY
-	bool
-	default y if ARCH_ARMV7
-	default n
-
-config USB_OHCI_BASE_ADDRESS
-	hex
-	depends on USB_MEMORY && USB_OHCI
-	default 0x12120000
-
-config USB_EHCI_BASE_ADDRESS
-	hex
-	depends on USB_MEMORY && USB_EHCI
-	default 0x12110000
-
-config USB_XHCI_BASE_ADDRESS
-	hex
-	depends on USB_MEMORY && USB_XHCI
-	default 0x12000000
 
 config USB_GEN_HUB
 	bool
