libpayload: Change CONFIG_X86_SERIAL_CONSOLE to CONFIG_8250_SERIAL_CONSOLE
While the 8250 compatible serial port driver is primarily useful on x86
systems because it works with the legacy x86 com ports, some devices which
aren't x86 based have 8250 compatible UARTs as well. This change renames the
CONFIG_X86_SERIAL_CONSOLE option to the more general and direct
CONFIG_8250_SERIAL_CONSOLE and fixes up the dependencies so that non-x86
systems can enable the driver, although it will default to on on x86 and off
otherwise.

Also, the default IO port address that's added to the sysinfo structure on x86
and which is intended to be overwritten by a value in the coreboot tables is
not used on ARM. That variable is adjusted so that it's more clear it's a
default value, and made dependent on x86 since that's the only place its value
is actually used.

BUG=None
TEST=With this and other changes, built for an ARM board which has an ns16550
(and essentially 8250) compatible UART. Built for pit and for link.
BRANCH=None

Change-Id: Ifeaade0e7bd76d382426e947275a9c933da4930e
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/170834
Reviewed-by: Hung-Te Lin <hungte@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -162,14 +162,16 @@ config SERIAL_CONSOLE
 	bool "See output on the serial port console"
 	default y
 
-config X86_SERIAL_CONSOLE
-	bool
-	depends on ARCH_X86 && SERIAL_CONSOLE
-	default y
+config 8250_SERIAL_CONSOLE
+	bool "8250, 16450, 16550, 16550A compatible serial port driver"
+	depends on SERIAL_CONSOLE
+	default y if ARCH_X86
+	default n if !ARCH_X86
 
 config SERIAL_IOBASE
-	hex "I/O base for the serial port (default 0x3f8)"
-	depends on X86_SERIAL_CONSOLE
+	## This default is currently not used on non-x86 systems.
+	hex "Default I/O base for the serial port (default 0x3f8)"
+	depends on SERIAL_CONSOLE && ARCH_X86
 	default 0x3f8
 
 config SERIAL_SET_SPEED
