--- a/payloads/libpayload/arch/arm/Makefile.inc
+++ b/payloads/libpayload/arch/arm/Makefile.inc
@@ -27,7 +27,7 @@
 ## SUCH DAMAGE.
 ##
 
-CFLAGS += -ffixed-r8 -mfloat-abi=hard -marm -mabi=aapcs-linux
+CFLAGS += -mfloat-abi=hard -marm -mabi=aapcs-linux
 
 head.o-y += head.S
 libc-y += main.c sysinfo.c
