Get libpayload to build for arm without external shell scripts
This additional CFLAGS makes it build without have to wrap the make in magic.

BUG=None
TEST=libpayload builds for ARM
BRANCH=None

Change-Id: Ie9a6239e2864734788c5b72f65a7523635ccf75c
Signed-off-by: Ronald G. Minnich <rminnich@google.com>
Reviewed-on: https://chromium-review.googlesource.com/178757
Reviewed-by: Ronald Minnich <rminnich@chromium.org>
Commit-Queue: Ronald Minnich <rminnich@chromium.org>
Tested-by: Ronald Minnich <rminnich@chromium.org>

--- a/payloads/libpayload/arch/arm/Makefile.inc
+++ b/payloads/libpayload/arch/arm/Makefile.inc
@@ -27,7 +27,7 @@
 ## SUCH DAMAGE.
 ##
 
-CFLAGS += -mfloat-abi=hard -marm -mabi=aapcs-linux
+CFLAGS += -mfloat-abi=hard -marm -mabi=aapcs-linux -march=armv7-a
 
 head.o-y += head.S
 libc-y += main.c sysinfo.c
