libpayload: Add minimal support for PL011 UART
This creates a new PL011 config variable which avoids the
infinite busy wait on serial_putchar() because the register
mapping is not compatible with current implementation.

BUG=None
BRANCH=none
TEST=printf() works on the PL011 based ARMv8 foundation model

Change-Id: I9feda35a50a3488fc504d1561444161e0889deda
Signed-off-by: Marcelo Povoa <marcelogp@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/187020
Reviewed-by: David Hendricks <dhendrix@chromium.org>

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -168,6 +168,11 @@ config 8250_SERIAL_CONSOLE
 	default y if ARCH_X86
 	default n if !ARCH_X86
 
+config PL011_SERIAL_CONSOLE
+	bool "PL011 compatible serial port driver"
+	depends on 8250_SERIAL_CONSOLE
+	default n
+
 config SERIAL_IOBASE
 	## This default is currently not used on non-x86 systems.
 	hex "Default I/O base for the serial port (default 0x3f8)"
