libpayload: Add support for arm64 in libpayload
Basic support for arm64 is enabled in libpayload.
Features added:
1) mem* operations in assembly.
2) Basic exception handling and support for testing exceptions.
3) Caching support.

Tested with arm64-generic board compilation.

BUG=None
BRANCH=None
TEST=Compilation successful

Change-Id: I4e86301f9c6383abc078e2b70071fb84bd6e4741
Signed-off-by: Furquan Shaikh <furquan@google.com>
Reviewed-on: https://chromium-review.googlesource.com/187067
Tested-by: Furquan Shaikh <furquan@chromium.org>
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Commit-Queue: Furquan Shaikh <furquan@chromium.org>

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -77,6 +77,11 @@ config ARCH_X86
         help
           Support the x86 architecture
 
+config ARCH_ARM64
+        bool "ARM64"
+        help
+          Support the ARM64 architecture
+
 endchoice
 
 config MEMMAP_RAM_ONLY
