--- a/payloads/libpayload/arch/arm64/Makefile.inc
+++ b/payloads/libpayload/arch/arm64/Makefile.inc
@@ -1,7 +1,7 @@
 ##
 ## This file is part of the libpayload project.
 ##
-## Copyright (c) 2012 Google Inc.
+## Copyright (C) 2008 Advanced Micro Devices, Inc.
 ##
 ## Redistribution and use in source and binary forms, with or without
 ## modification, are permitted provided that the following conditions
@@ -27,6 +27,17 @@
 ## SUCH DAMAGE.
 ##
 
-source "arch/arm/Config.in"
-source "arch/x86/Config.in"
-source "arch/arm64/Config.in"
+CFLAGS += -march=armv8-a
+arm64_asm_flags =
+
+head.o-y += head.S
+libc-y += main.c sysinfo.c
+libc-y += timer.c coreboot.c util.S
+libc-y += virtual.c
+libc-y += memcpy.S memset.S memmove.S
+libc-y += exception_asm.S exception.c
+libc-y += cache.c cpu.S
+
+# Add other classes here when you put assembly files into them!
+ head.o-S-ccopts += $(arm64_asm_flags)
+ libc-S-ccopts += $(arm64_asm_flags)
