--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -168,6 +168,16 @@ config 8250_SERIAL_CONSOLE
 	default y if ARCH_X86
 	default n if !ARCH_X86
 
+config S5P_SERIAL_CONSOLE
+	bool "Exynos SOC, S5P compatible serial port driver"
+	depends on SERIAL_CONSOLE
+	default n
+
+config TEGRA_SERIAL_CONSOLE
+	bool "Tegra SOC compatible serial port driver"
+	depends on SERIAL_CONSOLE
+	default n
+
 config PL011_SERIAL_CONSOLE
 	bool "PL011 compatible serial port driver"
 	depends on 8250_SERIAL_CONSOLE
