libpayload: Introduce new Kconfig to explicitly allow GPL code
There have been leaks of GPL code into libpayload for a while now, for
new features or improvements that require third party code with no
adequate alternative among BSD-licensed software. It seems silly and
counter-productive to keep holding back features and performance
improvements from libpayload for a use-case (proprietary payloads) that
doesn't even seem to be implemented anywhere to date. Open-source
payloads should not need to suffer to appease commercial ones.

Instead, this patch introduces a new Kconfig option to explicitly allow
inclusion of GPL code. It will use Kconfig dependencies and/or Makefile
rules to ensure that no GPL code can end up in the final payload if that
option is unset, allowing proprietary payloads to keep working with the
existing BSD-licensed feature set. New features and patches (that are
sufficiently separate and self-contained to allow guarding through this
config option) can choose whether to import GPL code, and need to depend
on this option if they do.

Also clean up all (known) existing uses of GPL code to depend on the new
option, add some recent third-party imports to the LICENSES file, and
relicense the selfboot.c files to BSD with permission of the author.

BUG=chrome-os-partner:24957
TEST=Compiled Falco and Nyan_Big both with and without the new option,
disassembled output binaries to ensure that memcpy() looks as expected.

Change-Id: I6e3a75b1a8e46291c75a876844c7a01f7d3f2a0e
Signed-off-by: Julius Werner <jwerner@chromium.org>
Signed-off-by: Hung-Te Lin <hungte@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/203513
Reviewed-by: Stefan Reinauer <reinauer@chromium.org>

--- a/payloads/libpayload/Config.in
+++ b/payloads/libpayload/Config.in
@@ -32,6 +32,15 @@ mainmenu "Libpayload Configuration"
 
 menu "Generic Options"
 
+config GPL
+	bool "GPLv2-licensed Options"
+	default n
+	help
+	  Prompt for options that will build code licensed under the GNU General
+	  Public License (version 2). This will subject the whole payload to the
+	  terms of this license (including its provision to release all sources,
+	  please see the LICENSE_GPL file for details).
+
 config EXPERIMENTAL
 	bool "Experimental Options"
 	default n
@@ -56,8 +65,9 @@ config DEVELOPER
 config REMOTEGDB
 	bool "Remote GDB stub"
 	default n
+	depends on GPL
 	help
-	  Enable Remote GDB debugging support. (CAREFUL: Compiles GPL code!)
+	  Enable Remote GDB debugging support.
 
 config CHROMEOS
 	bool "ChromeOS specific features"
